--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://yarin181.github.io/Yarin-portfolio/",
+  "homepage": "https://yarin181.github.io/Yarin-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
